# My_Simple_Car

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: engines.py  login.py  users.py
app/auth/: config.py  manager.py  utils.py
app/core/: admin_panel.py  config.py  security.py  settings.py  utils.py
app/crud/: __init__.py  base.py  crud_engine.py  crud_user.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  cars.py  documents.py  users.py
app/schemas/: __init__.py  engines.py  users.py
